Fix findbar layout and button visibility

--- a/chrome/findbar/findbar.css
+++ b/chrome/findbar/findbar.css
@@ -18,6 +18,7 @@ hbox[anonid="findbar-textbox-wrapper"]
 	position: relative !important;
 	display: flex !important;
 	padding: 2px !important;
+	height: 28px !important;
 	transition: background-color .1s var(--ease-basic) !important;
 }
 
@@ -32,6 +33,7 @@ hbox[anonid="findbar-textbox-wrapper"]:focus-within
 	border: 2px solid var(--toolbar-field-focus-border-color) !important;
 	margin: -1px !important;
 	padding: 1px !important;
+	height: 30px !important;
 }
 
 hbox[anonid="findbar-textbox-wrapper"] toolbarbutton
@@ -46,6 +48,11 @@ hbox[anonid="findbar-textbox-wrapper"] toolbarbutton
 	transition: background-color .2s var(--ease-basic) !important;
 	margin: 0 !important;
 	box-shadow: none !important;
+}
+
+hbox[anonid="findbar-textbox-wrapper"] toolbarbutton[disabled]
+{
+	display: none !important;
 }
 
 hbox[anonid="findbar-textbox-wrapper"] toolbarbutton .toolbarbutton-text
